--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <h1>Hello</h1>
 <h1>Hello my name is Reyki</h1>
 <h1>Hello my name is reyki, iam a programmer</h1>
-<h1>Hello Hello mu name is Reyki, I am a programmer. Iam learning at timedoors</h1>
-<h1>Helllo Hello my name is Reyki, Iam a programmer. Iam Learning at timedoors, my teacher is mr Ferdy</h1>
+<h1>Hello Hello mu name is Reyki, I am a programmer. Iam learning at Timedoors</h1>
+<h1>Helllo Hello my name is Reyki, Iam a programmer. Iam Learning at Timedoors, my teacher is Mr Ferdy</h1>
